tdf#159050: let fly portion swallow hole portion width

Change-Id: I65492418ca5f5f5b04e5f9bab9ac3e6bf2108aff
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/161910
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>